first item selected on first run app in RecipeListFragment

--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardView"
         android:layout_width="wrap_content"
         android:layout_height="250dp"
@@ -15,7 +15,7 @@
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/light_peach">
+            android:background="#FDF7F1">
 
             <ImageView
                 android:id="@+id/ivRecipe"
@@ -33,14 +33,12 @@
                 android:id="@+id/tvTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_start_top"
-                android:layout_marginTop="7dp"
-                android:layout_marginEnd="8dp"
+                android:layout_margin="8dp"
                 android:fontFamily="@font/lato_light"
                 android:textAppearance="?attr/textAppearanceBody2"
                 android:textSize="@dimen/list_title_recipe"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/roundedShape"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ivRecipe"
                 tools:text="Pasta" />
@@ -53,15 +51,14 @@
                 android:layout_marginBottom="8dp"
                 android:src="@drawable/rounded"
                 app:layout_constraintBottom_toBottomOf="@+id/container"
-                app:layout_constraintEnd_toEndOf="@+id/container"
-                app:layout_constraintStart_toEndOf="@+id/tvTitle" />
+                app:layout_constraintEnd_toEndOf="@+id/container" />
 
             <ImageView
                 android:id="@+id/readHeart"
-                android:layout_width="17dp"
-                android:layout_height="17dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:layout_marginStart="5dp"
-                android:src="@drawable/red_heart"
+                android:src="@drawable/red_outlined_heart"
                 app:layout_constraintBottom_toBottomOf="@+id/roundedShape"
                 app:layout_constraintStart_toStartOf="@+id/roundedShape"
                 app:layout_constraintTop_toTopOf="@+id/roundedShape" />
@@ -71,6 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
+                android:textSize="@dimen/list_title_recipe"
                 app:layout_constraintBottom_toBottomOf="@+id/roundedShape"
                 app:layout_constraintStart_toEndOf="@+id/readHeart"
                 app:layout_constraintTop_toTopOf="@+id/roundedShape"
